fixed extra scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ a {
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  width: 100%;
+  width: 80%;
   border-radius: 15px;
   border-bottom: 1px solid #ffcc80;
 }
